--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   lottie: ^1.2.1
   smooth_page_indicator: ^1.0.0+2
   video_player: ^2.2.11
+  device_info: ^2.0.3
 
 dev_dependencies:
   flutter_test:
