--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   smooth_page_indicator: ^1.0.0+2
   video_player: ^2.2.11
   device_info: ^2.0.3
+  speech_to_text: ^5.4.2
+  avatar_glow: ^2.0.2
 
 dev_dependencies:
   flutter_test:
